demo1/gateway/webhook-gateway.yaml
apiVersion: argoproj.io/v1alpha1
kind: Gateway
metadata:
  name: webhook-gateway
  labels:
    gateways.argoproj.io/gateway-controller-instanceid: argo-events
    gateway-name: "webhook-gateway"
spec:
  configMap: "webhook-gateway-configmap"
  type: "webhook"
  dispatchMechanism: "HTTP"
  eventVersion: "1.0"
  imageVersion: "v0.6"
  deploySpec:
    containers:
      - name: "webhook-events"
        image: "argoproj/webhook-gateway:v0.6"
        imagePullPolicy: "Always"
        command: ["/bin/webhook-gateway"]
    serviceAccountName: "argo-events-sa"
  serviceSpec:
    selector:
      gateway-name: "webhook-gateway"
    ports:
      - port: 12000
        targetPort: 12000
    type: LoadBalancer
  watchers:
    sensors:
      - name: "webhook-sensor"
